build as fat jar, fixed class path resource loading