@@ -1,10 +1,11 @@
 package com.monstrous.graphics.loaders;
 
-import java.io.IOException;
+import com.monstrous.FileHandle;
+import com.monstrous.Files;
+
 import java.nio.ByteBuffer;
 import java.nio.ByteOrder;
-import java.nio.file.Files;
-import java.nio.file.Paths;
+
 
 // to load a bin file
 public class GLTFRawBuffer {
@@ -16,11 +17,15 @@ public class GLTFRawBuffer {
     public GLTFRawBuffer(String filePath) {
         this.path = filePath;
 
-        try {
-            data = Files.readAllBytes(Paths.get(filePath));
-        } catch (IOException e) {
-            throw new RuntimeException("Could not read binary file "+filePath);
-        }
+        FileHandle handle = Files.internal(filePath);
+        data = handle.readAllBytes();
+
+
+//        try {
+//            data = Files.readAllBytes(Paths.get(filePath));
+//        } catch (IOException e) {
+//            throw new RuntimeException("Could not read binary file "+filePath);
+//        }
         //byteSize = data.length;
         byteBuffer = ByteBuffer.wrap(data);
         byteBuffer.order(ByteOrder.LITTLE_ENDIAN);
